# ChangeLog for dev-php4/pecl-zip
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-zip/ChangeLog,v 1.17 2006/09/29 07:24:30 sebastian Exp $

*pecl-zip-1.7.4 (29 Sep 2006)

  29 Sep 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -pecl-zip-1.7.2.ebuild, +pecl-zip-1.7.4.ebuild:
  Version bump, closes bug #148452.

*pecl-zip-1.7.2 (27 Aug 2006)

  27 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -pecl-zip-1.7.0.ebuild, -pecl-zip-1.7.1.ebuild, +pecl-zip-1.7.2.ebuild:
  Version bump.

*pecl-zip-1.7.1 (24 Aug 2006)

  24 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +pecl-zip-1.7.1.ebuild:
  Version bump.

  15 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org>
  pecl-zip-1.7.0.ebuild:
  DEPEND=dev-libs/zziplib -> sys-libs/zlib.

*pecl-zip-1.7.0 (14 Aug 2006)

  14 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +pecl-zip-1.7.0.ebuild:
  Version bump.

  26 Jan 2006; Jeroen Roovers <jer@gentoo.org> pecl-zip-1.0.ebuild:
  Marked stable on hppa (bug #119449).

  25 Jan 2006; Bryan Østergaard <kloeri@gentoo.org pecl-zip-1.0.ebuild:
  Stable on alpha.

  22 Jan 2006; Simon Stelling <blubb@gentoo.org> pecl-zip-1.0.ebuild:
  stable on amd64

  21 Jan 2006; Jason Wever <weeve@gentoo.org> pecl-zip-1.0.ebuild:
  Stable on SPARC wrt bug #119449.

  21 Jan 2006; <nixnut@gentoo.org> pecl-zip-1.0.ebuild:
  Added ppc keyword. bug 119449

  19 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> pecl-zip-1.0.ebuild:
  Stable on x86.

  18 Jan 2006; Markus Rothe <corsair@gentoo.org> pecl-zip-1.0.ebuild:
  Stable on ppc64; bug #119449

  25 Nov 2005; Luca Longinotti <chtekk@gentoo.org> pecl-zip-1.0.ebuild:
  Fix var ordering.

  19 Nov 2005; Markus Rothe <corsair@gentoo.org> pecl-zip-1.0.ebuild:
  Added ~ppc64 keywords; bug #102649

  16 Sep 2005; Christian Parpart <trapni@gentoo.org> pecl-zip-1.0.ebuild:
  added to ~amd64

  09 Sep 2005; Jason Wever <weeve@gentoo.org> pecl-zip-1.0.ebuild: