@@ -1,0 +1,3 @@
+MD5 e5aaeaac4e0724f95aef1e4a5f2ef8b6 zip-1.7.5.tgz 57137
+RMD160 7615cf4cb78c00209b416abe2e9224dd3ff15ab1 zip-1.7.5.tgz 57137
+SHA256 8f3164b36843b9416f5bbeae7c93a1e199a4b2b135a06f0c6cd8c31adc747c17 zip-1.7.5.tgz 57137
