@@ -1,6 +1,12 @@
 # ChangeLog for dev-php4/pecl-zip
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-zip/ChangeLog,v 1.17 2006/09/29 07:24:30 sebastian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-zip/ChangeLog,v 1.18 2006/10/22 06:32:11 sebastian Exp $
+
+*pecl-zip-1.7.5 (22 Oct 2006)
+
+  22 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  -pecl-zip-1.7.4.ebuild, +pecl-zip-1.7.5.ebuild:
+  Version bump.
 
 *pecl-zip-1.7.4 (29 Sep 2006)
 
